# game-of-life

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
include/engine/: core.h
include/engine/graphics/: renderer.h  shader.h  sprite.h
include/engine/interface/: input.h
include/engine/util/: asset.h  grid.h  log.h  math.h  timer.h  transform.h
include/gol/: game.h  grid.h  input.h  timer.h
src/: game.c  grid.c  input.c  main.c
src/engine/: core.c
src/engine/graphics/: renderer.c
src/engine/interface/: input.c
src/engine/util/: asset.c  grid.c
test/: CMakeLists.txt  grid_test.c
